tests/should_fail/builtin_with_contract.stderr
warning: function `builtin_with_contract` is never used
 --> builtin_with_contract.rs:8:4
  |
8 | fn builtin_with_contract() {}
  |    ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

error: cannot specify both `creusot::builtins` and a contract on the same definition
 --> builtin_with_contract.rs:8:1
  |
8 | fn builtin_with_contract() {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

